--- a/App/src/main/res/values/attr.xml
+++ b/App/src/main/res/values/attr.xml
@@ -7,8 +7,15 @@
         <attr name="progress" format="float" />
         <attr name="circle_bg" format="integer" />
     </declare-styleable>
+
     <declare-styleable name="Themes">
         <attr name="waveViewStyle" format="reference" />
     </declare-styleable>
 
+    <declare-styleable name="CircleImageView">
+        <attr name="civ_border_width" format="dimension" />
+        <attr name="civ_border_color" format="color" />
+        <attr name="civ_border_overlay" format="boolean" />
+        <attr name="civ_fill_color" format="color" />
+    </declare-styleable>
 </resources>
