--- a/App/src/main/res/values/attr.xml
+++ b/App/src/main/res/values/attr.xml
@@ -47,4 +47,10 @@
         <attr name="titleCenterSize" format="dimension" />
 
     </declare-styleable>
+
+    <declare-styleable name="PxBlurringView">
+        <attr name="blurRadius" format="integer"/>
+        <attr name="downsampleFactor" format="integer"/>
+        <attr name="overlayColor" format="color"/>
+    </declare-styleable>
 </resources>
