--- a/App/src/main/res/values/attr.xml
+++ b/App/src/main/res/values/attr.xml
@@ -68,4 +68,20 @@
         <attr name="duration" format="integer"/>
         <attr name="tapToFlip" format="boolean"/>
     </declare-styleable>
+
+    <declare-styleable name="RadarView">
+        <attr name="radar_layer" format="integer"/>
+        <attr name="rotation_enable" format="boolean" />
+        <attr name="web_mode" format="enum">
+            <enum name="polygon" value="1" />
+            <enum name="circle" value="2" />
+        </attr>
+        <attr name="max_value" format="float" />
+        <attr name="radar_line_color" format="color" />
+        <attr name="radar_line_enable" format="boolean" />
+        <attr name="radar_line_width" format="dimension" />
+        <attr name="vertex_text_color" format="color" />
+        <attr name="vertex_text_size" format="dimension" />
+        <attr name="vertex_text_offset" format="dimension" />
+    </declare-styleable>
 </resources>
